# audio-effects-demo

./: .gitignore  README.md  cross_build.sh  package.sh  release.sh  run_android.sh
android/: release.sh  settings.gradle
android/AudioEffect/: settings.gradle
android/AudioEffect/app/: build.gradle
android/AudioEffect/app/src/androidTest/java/com/layne/audioeffect/: ExampleInstrumentedTest.java
android/AudioEffect/app/src/main/: AndroidManifest.xml
android/AudioEffect/app/src/main/cpp/: native-lib.cpp
android/AudioEffect/app/src/main/java/com/layne/audioeffect/: MainActivity.java  Utils.java
android/AudioEffect/app/src/main/res/layout/: activity_main.xml
android/AudioEffect/app/src/main/res/values/: strings.xml
android/AudioEffect/app/src/test/java/com/layne/audioeffect/: ExampleUnitTest.java
android/AudioEffect/libeffect/: build.gradle
android/AudioEffect/libeffect/src/androidTest/java/com/layne/libeffect/: ExampleInstrumentedTest.java
android/AudioEffect/libeffect/src/main/: AndroidManifest.xml
android/AudioEffect/libeffect/src/main/jni/: Android.mk  Application.mk  JniAudioEffect.cpp  utils.h
android/AudioEffect/libeffect/src/main/res/values/: strings.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/xmly/sound_effects/: MainActivity.java  ObtainPcmDataCallback.java  SearchPCMEncoderAAC.java  Utils.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/audio-effects-arm64/: build.gradle
android/audio-effects-arm64/src/androidTest/java/com/xmly/audio_effects_arm64/: ExampleInstrumentedTest.java
android/audio-effects-arm64/src/main/: AndroidManifest.xml
android/audio-effects-arm64/src/main/res/values/: strings.xml
android/audio-effects-arm64/src/test/java/com/xmly/audio_effects_arm64/: ExampleUnitTest.java
android/audio-effects-armv5/src/androidTest/java/com/xmly/audio_effects_armv5/: ExampleInstrumentedTest.java
android/audio-effects-armv5/src/main/: AndroidManifest.xml
android/audio-effects-armv5/src/main/res/values/: strings.xml
android/audio-effects-armv5/src/test/java/com/xmly/audio_effects_armv5/: ExampleUnitTest.java
android/audio-effects-armv7a/src/main/: AndroidManifest.xml
android/audio-effects-armv7a/src/main/res/values/: strings.xml
android/audio-effects-java/src/main/: AndroidManifest.xml
android/audio-effects-java/src/main/java/com/xmly/audio_effects/: LibLoader.java  XmAudioEffects.java
android/audio-effects-java/src/main/res/values/: strings.xml
android/audio-effects-x86/src/androidTest/java/com/xmly/audio_effects_x86/: ExampleInstrumentedTest.java
android/audio-effects-x86/src/main/: AndroidManifest.xml
android/audio-effects-x86/src/main/jni/: lib-audio-effects
android/audio-effects-x86/src/main/res/values/: strings.xml
android/audio-effects-x86/src/test/java/com/xmly/audio_effects_x86/: ExampleUnitTest.java
android/audio-effects-x86_64/src/androidTest/java/com/xmly/audio_effects_x86_64/: ExampleInstrumentedTest.java
android/audio-effects-x86_64/src/main/: AndroidManifest.xml
android/audio-effects-x86_64/src/main/jni/: Android.mk
android/audio-effects-x86_64/src/main/res/values/: strings.xml
android/audio-effects-x86_64/src/test/java/com/xmly/audio_effects_x86_64/: ExampleUnitTest.java
android/lib-audio-effects/: .gitignore  Android.mk  utils.h  xm_audio_effects_jni.c
lib-audio-effect/: CMakeLists.txt  run_test.sh  run_valgrind_test.sh
lib-audio-effect/include/: effects.h  logger.h  xmly_audio_effects.h
lib-audio-effect/src/: echo.c  effect_name.h  effect_struct.h  effects.c  equalizer.c  minions.c  noise_suppression.c  voice_morph.c  xmly_audio_effects.c  xmly_echo.c  xmly_reverb.c
lib-audio-effect/src/dsp_tools/iir_design/: iir_design.c  iir_design.h
lib-audio-effect/src/pitch_tracker/: pitch_tracker.c
lib-audio-effect/src/resample/: resample.c  resample.h
lib-audio-effect/src/tools/: dict.c  log.c  logger.c  mem.c  util.c  util.h
lib-audio-effect/src/voice_morph/: morph_core.c  morph_core.h  voice_morph_praat.m
lib-audio-effect/tests/: CMakeLists.txt  test_all_effects.c  test_echo.c  test_effect.c  test_equalizer.c  test_fifo.c  test_logger.c  test_minions.c  test_noise_suppression.c  test_voice_morph.c  test_xmly_audio_effects.c  test_xmly_echo.c  test_xmly_reverb.c
lib-audio-effects/: CMakeLists.txt  run_test.sh  run_valgrind_test.sh
lib-audio-effects/data/: ns_input.pcm  search_data_recognized.pcm
lib-audio-effects/include/: error_def.h  log.h  xm_audio_effects.h
lib-audio-effects/src/: beautify.c  effect_struct.h  effects.h  minions.c  morph_filter.c  noise_suppression.c  voice_effect.c  voice_effect.h  voice_morph.c  xm_audio_effects.c  xmly_audio_effects.c  xmly_echo.c  xmly_reverb.c
lib-audio-effects/src/math/: fast_math_ops.h  junior_func.h  spl_math.h
lib-audio-effects/src/morph_filter/pitch_tracker/server/: pitch_cand_loader.c  pitch_cand_loader.h  pitch_cand_server.c  pitch_find_path.h
lib-audio-effects/src/morph_filter/pitch_tracker/src/: frequency_limiter.h  low_pass.c  low_pass.h  pitch_core.c  pitch_core.h  pitch_macro.h  pitch_tracker.cc  pitch_tracker.h
lib-audio-effects/src/morph_filter/voice_morph/morph/: morph_core.c  morph_core.h  voice_morph.c  voice_morph.cc  voice_morph.h
lib-audio-effects/src/morph_filter/voice_morph/resample/: resample.h
lib-audio-effects/src/noise_suppression/: noise_suppression.c
lib-audio-effects/src/pitch_tracker/: blackman.c  blackman.h  low_pass.c  low_pass.h  pitch_macro.h  pitch_tracker.h
lib-audio-effects/src/tools/: dict.c  util.h
lib-audio-effects/src/voice_morph/: morph_core.c
lib-audio-effects/tests/: CMakeLists.txt  test_beautify.c  test_minions.c  test_noise_suppression.c  test_voice_morph.c  test_xm_audio_effects.c  test_xmly_audio_effects.c  test_xmly_echo.c  test_xmly_reverb.c
prebuilt/ios/libffmpeg/arm64/: config.h
prebuilt/ios/libffmpeg/armv7/: config.h
prebuilt/ios/libffmpeg/i386/: config.h
prebuilt/ios/libffmpeg/x86_64/: config.h
(+12 files in other folders)
